Bug 46623 - microblaze --enable-werror-always build fails
Summary: microblaze --enable-werror-always build fails
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords: build
Depends on:
Blocks: enable-werror-always
  Show dependency treegraph
 
Reported: 2010-11-23 17:01 UTC by Jorn Wolfgang Rennecke
Modified: 2010-11-26 17:42 UTC (History)
0 users

See Also:
Host:
Target: microblaze-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorn Wolfgang Rennecke 2010-11-23 17:01:24 UTC
gcc -c   -g -O2 -DIN_GCC -DCROSS_DIRECTORY_STRUCTURE  -W -Wall -Wwrite-strings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes -Wmissing-format-attribute -pedantic -Wno-long-long -Wno-variadic-macros -Wno-overlength-strings -Werror -Wold-style-definition -Wc++-compat -fno-common  -DHAVE_CONFIG_H -I. -I. -I../../../gcc/gcc -I../../../gcc/gcc/. -I../../../gcc/gcc/../include -I../../../gcc/gcc/../libcpp/include  -I../../../gcc/gcc/../libdecnumber -I../../../gcc/gcc/../libdecnumber/dpd -I../libdecnumber    insn-preds.c -o insn-preds.o
../../../gcc/gcc/config/microblaze/predicates.md: In function ‘arith_operand32’:
../../../gcc/gcc/config/microblaze/predicates.md:31:2: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
../../../gcc/gcc/config/microblaze/predicates.md:31:2: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare]
Comment 1 Jorn Wolfgang Rennecke 2010-11-26 17:38:24 UTC
Author: amylaar
Date: Fri Nov 26 17:38:20 2010
New Revision: 167186

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=167186
Log:
	PR target/46623
	* config/microblaze/microblaze.c (microblaze_block_move_straight):
	Use XALLOCAVEC.
	(microblaze_option_override): Don't use C++ style comments.
	(save_restore_insns): Remove unused variable base_offset.
	(microblaze_expand_prologue): Remove unused variable insn.
	(microblaze_secondary_reload): Adjust type to match target.h .
	(microblaze_elf_in_small_data_p): Move declarations to start of block.
	(microblaze_expand_move): Likewise.
	* config/microblaze/microblaze.h (LARGE_INT):
	Avoid signed / unsigned comparisons.
	(ASM_OUTPUT_ALIGNED_COMMON, ASM_OUTPUT_ALIGNED_LOCAL): Likewise.
	(ASM_FORMAT_PRIVATE_NAME): Make format specifier match printed data.
	(ASM_FINISH_DECLARE_OBJECT): Likewise.  Constify name.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/microblaze/microblaze.c
    trunk/gcc/config/microblaze/microblaze.h
Comment 2 Jorn Wolfgang Rennecke 2010-11-26 17:42:10 UTC
Patch has been applied to trunk.