	PR target/46623 	* config/microblaze/microblaze.c (microblaze_block_move_straight): 	Use XALLOCAVEC. 	(microblaze_option_override): Don't use C++ style comments. 	(save_restore_insns): Remove unused variable base_offset. 	(microblaze_expand_prologue): Remove unused variable insn. 	(microblaze_secondary_reload): Adjust type to match target.h . 	(microblaze_elf_in_small_data_p): Move declarations to start of block. 	(microblaze_expand_move): Likewise. 	* config/microblaze/microblaze.h (LARGE_INT): 	Avoid signed / unsigned comparisons. 	(ASM_OUTPUT_ALIGNED_COMMON, ASM_OUTPUT_ALIGNED_LOCAL): Likewise. 	(ASM_FORMAT_PRIVATE_NAME): Make format specifier match printed data. 	(ASM_FINISH_DECLARE_OBJECT): Likewise.  Constify name.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@167186 138bc75d-0d04-0410-961f-82ee72b054a4